tests/ui/const-generics/gca/direct-const-arg-fn-call.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/direct-const-arg-fn-call.rs:35:23
   |
LL | fn bad(_: FieldName<{ FieldName::len() }>) {}
   |                       ^^^^^^^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/direct-const-arg-fn-call.rs:44:31
   |
LL | fn bad_tracing(_: FieldName<{ FieldName::len_of("id") }>) {}
   |                               ^^^^^^^^^^^^^^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/direct-const-arg-fn-call.rs:61:23
   |
LL | fn bad_union(_: Tag<{ Tag::width() }>) {}
   |                       ^^^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/direct-const-arg-fn-call.rs:70:28
   |
LL | fn bad_prim(_: FieldName<{ u32::from_str_radix("10", 10) }>) {}
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/direct-const-arg-fn-call.rs:81:31
   |
LL | fn bad_foreign(_: FieldName<{ Opaque::foo() }>) {}
   |                               ^^^^^^^^^^^^^

error: aborting due to 5 previous errors

